--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,8 +26,7 @@ jobs:
 
     - name: Build and push Docker image
       run: |
-        docker build -t myimage .
-        docker tag myimage:latest 944372342612.dkr.ecr.us-west-2.amazonaws.com/myimage:latest
+        docker build -t 944372342612.dkr.ecr.us-west-2.amazonaws.com/myimage:latest -f Dockerfile .
         docker push 944372342612.dkr.ecr.us-west-2.amazonaws.com/myimage:latest
 
     - name: Deploy to EKS
