--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Build and push Docker image
       run: |
-        docker build -t 944372342612.dkr.ecr.us-west-2.amazonaws.com/myimage:latest -f Dockerfile .
+        docker build -t 944372342612.dkr.ecr.us-west-2.amazonaws.com/myimage:latest .
         docker push 944372342612.dkr.ecr.us-west-2.amazonaws.com/myimage:latest
 
     - name: Deploy to EKS
