--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,10 +26,11 @@ jobs:
 
     - name: Build and push Docker image
       run: |
-        docker build -t 944372342612.dkr.ecr.us-west-2.amazonaws.com/myimage:latest .
+        docker build -t myimage:latest .
+        docker tag myimage:latest 944372342612.dkr.ecr.us-west-2.amazonaws.com/myimage:latest
         docker push 944372342612.dkr.ecr.us-west-2.amazonaws.com/myimage:latest
 
     - name: Deploy to EKS
       run: |
         aws eks --region us-west-2 update-kubeconfig --name ecrtest
-        kubectl rollout restart deployment mypro
+        kubectl rollout restart deployment mypro -n default
